log/build_2025-04-13_14-30-55/my_first_ros_rclpy_pkg/stderr.log
  File "/home/jungseong/robot_ws/install/my_first_ros_rclpy_pkg/lib/python3.10/site-packages/my_first_ros_rclpy_pkg/helloworld_publisher.py", line 65
    break
    ^^^^^
SyntaxError: 'break' outside loop

